<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:checked="true"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_profile"/>

    <item
        android:id="@+id/favourites"
        android:title="@string/favourite_restaurants"
        android:icon="@drawable/ic_favourites"/>

    <item
        android:id="@+id/orderHistory"
        android:title="Order History"
        android:icon="@drawable/ic_orderhistory"/>

    <item
        android:id="@+id/questions"
        android:title="@string/faqs"
        android:icon="@drawable/ic_questions"/>

    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        android:icon="@drawable/ic_logout"/>

</group>

</menu>