<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Registration"
    android:background="#4c8c4a">

    <EditText
        android:id="@+id/etRegistrationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:minLines="3"
        android:hint="@string/name_min_3_charactes"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etRegistrationEmail"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etRegistrationNumber"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/etRegistrationAddress"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/delivery_address"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etRegistrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:minEms="4"
        android:hint="Password (min 4 characters)"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/etRegistrationConfirmPassword"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:minEms="4"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:background="#ff6f00"
        android:textColor="#ffffff"/>



</LinearLayout>