<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4c8c4a"
    android:orientation="vertical"
    tools:context=".Activity.ForgotPassword"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6">

    <ImageView
        android:id="@+id/imgForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"/>

    <TextView
        android:id="@+id/txtEnterInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgForgotPassword"
        android:text="@string/enter_registered_mobile_number_and_email_below"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginBottom="35dp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/etInfoMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEnterInfo"
        android:inputType="phone"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:hint="@string/mobile_number_10_digits"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/etInfoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="10dp"
        android:hint="@string/email_address"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/etInfoMobileNumber"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:background="#ff6f00"
        android:textColor="#ffffff"
        android:text="@string/next"
        android:textAllCaps="false"
        android:layout_below="@id/etInfoEmail"/>

    </RelativeLayout>
</LinearLayout>